--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@ body {
 
 /******************NAVBAR-LINKS***********/
 
+nav {
+    z-index: 2;
+}
+
 nav a.nav-link {
     font-weight: 500;
     letter-spacing: 0.04rem;
@@ -26,4 +30,73 @@ nav ul li {
 .navbar-nav>li>a {
     margin-left: 0.75rem;
     margin-right: 0.75rem;
+}
+
+.navbar-nav>li>a.active {
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
+    color: #ffc600 !important;
+}
+
+
+/*******************HEADER****************/
+
+.header-wraper {
+    position: relative;
+    background: url(./background.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 90vh;
+}
+
+.main-content {
+    display: flex;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    z-index: 1;
+}
+
+.main-content h1 {
+    text-transform: uppercase;
+    color: #ffc600;
+}
+
+
+/************TYPED-TEXT**********/
+
+.typed-text {
+    font-size: 2rem;
+    color: #fff;
+}
+
+
+/*************BUTTON*************/
+
+.header-button {
+    border: 1px solid red;
+    text-transform: uppercase;
+    border-radius: 0;
+    padding: 0.5rem;
+    color: #fff;
+    margin-top: 2rem;
+}
+
+.header-button:hover {
+    text-decoration: none;
+    background-color: red;
+    transition: .2s ease-in-out
+}
+
+.tsparticles-canvas-el {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    z-index: 1;
 }
